redis_response_caching/guide/response_caching/kubernetes/weather_forecasting_backend_deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "weather_forecasting_backend"
  name: "weather-forecasting-backend-two"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "weather_forecasting_backend"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "weather_forecasting_backend"
        imagePullPolicy: "IfNotPresent"
        name: "weather-forecasting-backend-two"
        ports:
        - containerPort: 9096
          protocol: "TCP"
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
